test(location Unit ,/unit/model/*): add some unit about login function
添加了单元测试的插件，并对微信小程序的登录功能进行的简单的单元测试。
